--- a/app/src/main/res/layout/fragment_staff_bio.xml
+++ b/app/src/main/res/layout/fragment_staff_bio.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/default_bg_color"
     android:overScrollMode="never"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
@@ -70,8 +71,8 @@
             android:layout_gravity="center_horizontal"
             android:paddingBottom="10dp"
             android:paddingTop="10dp"
-            android:visibility="gone"
-            android:text="@string/no_data" />
+            android:text="@string/no_data"
+            android:visibility="gone" />
     </LinearLayout>
 
 </android.support.v4.widget.NestedScrollView>
